--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div
           style="left: 778.13px; top: 9.86px; position: absolute; color: black; font-size: 15px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-          <a href="Fomulario.html"> Contactanos</a> </div>
+          <a href="https://form.123formbuilder.com/6534214/contact-form"> Contactanos</a> </div>
         <div
           style="left: 34px; top: 10px; position: absolute; color: black; font-size: 15px; font-family: Inter; font-weight: 400; word-wrap: break-word">
           <a href="Recuperacion.html"> Recuperación de datos </a> </div>
