--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="https://form.123formbuilder.com/6534214/contact-form"> Contactanos</a> </div>
         <div
           style="left: 34px; top: 10px; position: absolute; color: black; font-size: 15px; font-family: Inter; font-weight: 400; word-wrap: break-word">
-          <a href="Recuperacion.html"> Recuperación de datos </a> </div>
+          <a href="https://form.123formbuilder.com/6534214/contact-form"> Recuperación de datos </a> </div>
             </div>
             <div style="width: 280px; height: 134px; left: 0px; top: 0px; position: absolute">
                 <img style="width: 250px; height: 100px ; left: -35px; top: 15px; position: absolute; backdrop-filter: blur(4px)"
